--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,8 @@
 ---
 output: md_document
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -8,44 +11,71 @@ output: md_document
 knitr::opts_chunk$set(fig.path = "man/figures/")
 ```
 
-# CMAverse: a suite of functions for causal mediation analysis<img src="man/figures/logo.png" align="right" width="240" />
+# CMAverse: a suite of functions for causal mediation analysis<img src="man/figures/logo.png" align="right" width="240"/>
 
-[![Project Status: Active](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![R build status](https://github.com/BS1125/CMAverse/workflows/R-CMD-check/badge.svg)](https://github.com/BS1125/CMAverse/actions)
-[![Codecov test coverage](https://codecov.io/gh/BS1125/CMAverse/branch/master/graph/badge.svg)](https://codecov.io/gh/BS1125/CMAverse)
+[![Project Status:
+Active](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
+[![R build
+status](https://github.com/BS1125/CMAverse/workflows/R-CMD-check/badge.svg)](https://github.com/BS1125/CMAverse/actions)
+[![Codecov test
+coverage](https://codecov.io/gh/BS1125/CMAverse/branch/master/graph/badge.svg)](https://codecov.io/gh/BS1125/CMAverse)
 
-## About the Package 
+## About the Package
 
-The R package `CMAverse` provides a suite of functions for reproducible causal mediation 
-analysis including `cmdag` for DAG visualization, `cmest` for statistical modeling and `cmsens` for sensitivity analysis. 
+The R package `CMAverse` provides a suite of functions for reproducible
+causal mediation analysis including `cmdag` for DAG visualization,
+`cmest` for statistical modeling and `cmsens` for sensitivity analysis.
 
-See the package [website](https://bs1125.github.io/CMAverse/) for a quickstart guide, an overview of statistical modeling approaches and examples.
+See the package [website](https://bs1125.github.io/CMAverse/) for a
+quickstart guide, an overview of statistical modeling approaches and
+examples.
 
-Cite the paper: [CMAverse
-a suite of functions for reproducible causal mediation analyses](https://journals.lww.com/epidem/citation/9000/cmaverse__a_suite_of_functions_for_reproducible.98264.aspx). 
+Cite the paper: [CMAverse a suite of functions for reproducible causal
+mediation
+analyses](https://journals.lww.com/epidem/citation/9000/cmaverse__a_suite_of_functions_for_reproducible.98264.aspx).
 
-Cite as well, if using `cmest_multistate`: [Multistate approach for stochastic interventions on a time-to-event mediator in the presence of competing risks: A new R command within the CMAverse R
-package](https://journals.lww.com/epidem/fulltext/2025/01000/multistate_approach_for_stochastic_interventions.17.aspx).  
+Cite as well, if using `cmest_multistate`: [Multistate approach for
+stochastic interventions on a time-to-event mediator in the presence of
+competing risks: A new R command within the CMAverse R
+package](https://journals.lww.com/epidem/fulltext/2025/01000/multistate_approach_for_stochastic_interventions.17.aspx).
 
 We welcome your feedback and questions:
 
-- Email bs3141@columbia.edu for general questions
+-   Email [bs3141\@columbia.edu](mailto:bs3141@columbia.edu){.email} for
+    general questions
 
-- Email zw2899@cumc.columbia.edu for questions related to `cmest_multistate`
+-   Email
+    [zw2899\@cumc.columbia.edu](mailto:zw2899@cumc.columbia.edu){.email}
+    for questions related to `cmest_multistate`
 
 ### DAG Visualization
 
-`cmdag` visualizes causal relationships via a directed acyclic graph (DAG).
+`cmdag` visualizes causal relationships via a directed acyclic graph
+(DAG).
 
 ### Statistical Modeling
 
-`cmest` implements six causal mediation analysis approaches including *the regression-based approach* by [Valeri et al. (2013)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3659198/) and [VanderWeele et al. (2014)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4287269/), 
-*the weighting-based approach* by [VanderWeele et al. (2014)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4287269/), *the inverse odd-ratio weighting approach* by [Tchetgen Tchetgen (2013)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3954805/), 
-*the natural effect model* by
-[Vansteelandt et al. (2012)](https://www.degruyter.com/view/journals/em/1/1/article-p131.xml?language=en), *the marginal structural model* by [VanderWeele 
-et al. (2017)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5560424/), and *the g-formula approach* by [Robins (1986)](https://www.sciencedirect.com/science/article/pii/0270025586900886). 
+`cmest` implements six causal mediation analysis approaches including
+*the regression-based approach* by [Valeri et al.
+(2013)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3659198/) and
+[VanderWeele et al.
+(2014)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4287269/), *the
+weighting-based approach* by [VanderWeele et al.
+(2014)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4287269/), *the
+inverse odd-ratio weighting approach* by [Tchetgen Tchetgen
+(2013)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3954805/), *the
+natural effect model* by [Vansteelandt et al.
+(2012)](https://www.degruyter.com/view/journals/em/1/1/article-p131.xml?language=en),
+*the marginal structural model* by [VanderWeele et al.
+(2017)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5560424/), and *the
+g-formula approach* by [Robins
+(1986)](https://www.sciencedirect.com/science/article/pii/0270025586900886).
 
-`cmest` currently supports a single exposure, multiple sequential mediators and a single outcome.  When multiple mediators are of interest, `cmest` estimates the joint mediated effect through the set of mediators. `cmest` also allows for time varying confounders preceding mediators. The two causal scenarios supported are:
+`cmest` currently supports a single exposure, multiple sequential
+mediators and a single outcome. When multiple mediators are of interest,
+`cmest` estimates the joint mediated effect through the set of
+mediators. `cmest` also allows for time varying confounders preceding
+mediators. The two causal scenarios supported are:
 
 (1) There are no confounders affected by the exposure:
 
@@ -62,7 +92,8 @@ coordinates(g1) <- list(x=c(A=0,Y=4,M=2,C=0.2),y=c(A=0,Y=0,M=-0.8,C=-1))
 plot(g1)
 ```
 
-(2) There are mediator-outcome confounders affected by the exposure and these confounders precede all of the mediators:
+(2) There are mediator-outcome confounders affected by the exposure and
+    these confounders precede all of the mediators:
 
 ```{r echo=F,warning=F,message=F,fig.width=6,fig.height=3}
 g2 <- dagitty::dagitty( "dag {
@@ -82,52 +113,90 @@ dagitty::coordinates(g2) <- list(x=c(A=0,Y=4,M=2,C=0.2,L=2),y=c(A=0,Y=0,M=-0.8,C
 plot(g2)
 ```
 
-Table: Table: Supported Data Types and Functionalities of `cmest`
+|                                              |   rb   |  wb   | iorw | ne  |  msm  | gformula[^1] |
+|----------------------------------------------|:------:|:-----:|:----:|:---:|:-----:|:------------:|
+| Continuous Y[^2]                             |   √    |   √   |  √   |  √  |   √   |      √       |
+| Binary Y                                     |   √    |   √   |  √   |  √  |   √   |      √       |
+| Count Y                                      |   √    |   √   |  √   |  √  |   √   |      √       |
+| Nominal Y                                    |   √    |   √   |  √   |  ×  |   √   |      √       |
+| Ordinal Y                                    |   √    |   √   |  √   |  ×  |   √   |      √       |
+| Survival Y                                   |   √    |   ×   |  √   |  ×  |   √   |      √       |
+| Continuous M                                 |   √    |   √   |  √   |  √  |   ×   |      √       |
+| Binary M                                     |   √    |   √   |  √   |  √  |   √   |      √       |
+| Nominal M                                    |   √    |   √   |  √   |  √  |   √   |      √       |
+| Ordinal M                                    |   √    |   √   |  √   |  √  |   √   |      √       |
+| Count M                                      |   √    |   √   |  √   |  √  |   ×   |      √       |
+| M of Any Type                                |   ×    |   √   |  √   |  √  |   ×   |      ×       |
+| Continuous A                                 |   √    | ×[^3] |  ×   |  √  | ×[^4] |      √       |
+| Binary A                                     |   √    |   √   |  √   |  √  |   √   |      √       |
+| Nominal A                                    |   √    |   √   |  √   |  √  |   √   |      √       |
+| Ordinal A                                    |   √    |   √   |  √   |  √  |   √   |      √       |
+| Count A                                      |   √    | ×[^5] |  ×   |  √  | ×[^6] |      √       |
+| Mediator-outcome Confounder(s) Affected by A |   ×    |   ×   |  ×   |  ×  |   √   |      √       |
+| 2-way Decomposition                          |   √    |   √   |  √   |  √  |   √   |      √       |
+| 4-way Decomposition                          |   √    |   √   |  ×   |  √  |   √   |      √       |
+| Estimation: Closed-form Parameter Function   | √[^7]  |   ×   |  ×   |  ×  |   ×   |      ×       |
+| Estimation: Direct Counterfactual Imputation |   √    |   √   |  √   |  √  |   √   |      √       |
+| Inference: Delta Method                      | √[^8]  |   ×   |  ×   |  ×  |   ×   |      ×       |
+| Inference: Bootstrapping                     |   √    |   √   |  √   |  √  |   √   |      √       |
+| Marginal Effects                             | √[^9]  |   √   |  √   |  √  |   √   |      √       |
+| Effects Conditional on C                     | √[^10] |   ×   |  ×   |  ×  |   ×   |      ×       |
 
-|     |rb|wb|iorw|ne|msm|gformula[^1]
-|-----|:-----:|:------:|:------:|:------:|:------:|:------:|
-|Continuous Y[^6]|√|√|√|√|√|√|
-|Binary Y|√|√|√|√|√|√|
-|Count Y|√|√|√|√|√|√|
-|Nominal Y|√|√|√|×|√|√|
-|Ordinal Y|√|√|√|×|√|√|
-|Survival Y|√|×|√|×|√|√|
-|Continuous M|√|√|√|√|×|√|
-|Binary M|√|√|√|√|√|√|
-|Nominal M|√|√|√|√|√|√|
-|Ordinal M|√|√|√|√|√|√|
-|Count M|√|√|√|√|×|√|
-|M of Any Type|×|√|√|√|×|×|
-|Continuous A|√|×[^7]|×|√|×[^7]|√|
-|Binary A|√|√|√|√|√|√|
-|Nominal A|√|√|√|√|√|√|
-|Ordinal A|√|√|√|√|√|√|
-|Count A|√|×[^8]|×|√|×[^8]|√|
-|Mediator-outcome Confounder(s) Affected by A|×|×|×|×|√|√|
-|2-way Decomposition|√|√|√|√|√|√|
-|4-way Decomposition|√|√|×|√|√|√|
-|Estimation: Closed-form Parameter Function|√[^2]|×|×|×|×|×|
-|Estimation: Direct Counterfactual Imputation|√|√|√|√|√|√|
-|Inference: Delta Method|√[^3]|×|×|×|×|×|
-|Inference: Bootstrapping|√|√|√|√|√|√|
-|Marginal Effects|√[^4]|√|√|√|√|√|
-|Effects Conditional on C|√[^5]|×|×|×|×|×|
-[^1]: rb: the regression-based approach; wb: the weighting-based approach; iorw: the inverse odds ratio weighting approach; ne: the natural effect model; msm: the marginal structural model; gformula: the g-formula approach.
-[^2]: closed-form parameter function estimation only supports a single mediator.
-[^3]: delta method inference is available only when closed-form parameter function estimation is used.
-[^4]: marginal effects are estimated when direct counterfactual imputation estimation is used.
-[^5]: conditional effects are estimated when closed-form parameter function estimation is used.
-[^6]: Y denotes the outcome, A denotes the exposure, M denotes the mediator(s) and C denotes the exposure-outcome confounder(s), the exposure-mediator confounder(s) and the mediator-outcome confounder(s) not affected by the exposure.
-[^7]: continuous A is not supported when C is not empty; otherwise, it is supported.
-[^8]: count A is not supported when C is not empty; otherwise, it is supported.
+: Table: Supported Data Types and Functionalities of `cmest`
+
+[^1]: rb: the regression-based approach; wb: the weighting-based
+    approach; iorw: the inverse odds ratio weighting approach; ne: the
+    natural effect model; msm: the marginal structural model; gformula:
+    the g-formula approach.
+
+[^2]: Y denotes the outcome, A denotes the exposure, M denotes the
+    mediator(s) and C denotes the exposure-outcome confounder(s), the
+    exposure-mediator confounder(s) and the mediator-outcome
+    confounder(s) not affected by the exposure.
+
+[^3]: continuous A is not supported when C is not empty; otherwise, it
+    is supported.
+
+[^4]: continuous A is not supported when C is not empty; otherwise, it
+    is supported.
+
+[^5]: count A is not supported when C is not empty; otherwise, it is
+    supported.
+
+[^6]: count A is not supported when C is not empty; otherwise, it is
+    supported.
+
+[^7]: closed-form parameter function estimation only supports a single
+    mediator.
+
+[^8]: delta method inference is available only when closed-form
+    parameter function estimation is used.
+
+[^9]: marginal effects are estimated when direct counterfactual
+    imputation estimation is used.
+
+[^10]: conditional effects are estimated when closed-form parameter
+    function estimation is used.
 
 ### Multiple Imputation
 
-`cmest` provides the option `multimp = TRUE` to perform multiple imputations for a dataset with missing values. 
+`cmest` provides the option `multimp = TRUE` to perform multiple
+imputations for a dataset with missing values.
 
 ### Sensitivity Analysis
 
-`cmsens` conducts sensitivity analysis for unmeasured confounding via the *E-value* approach by [VanderWeele et al. (2017)](https://pubmed.ncbi.nlm.nih.gov/28693043/) and [Smith et al. (2019)](https://pubmed.ncbi.nlm.nih.gov/31348008/), and sensitivity analysis for measurement error via *regression calibration* by [Carroll et al. (1995)](https://www.taylorfrancis.com/books/9780429139635) and *SIMEX* by [Cook et al. (1994)](https://www.jstor.org/stable/2290994?seq=1#metadata_info_tab_contents) and [Küchenhoff et al. (2006)](https://pubmed.ncbi.nlm.nih.gov/16542233/). Sensitivity analysis for measurement error is currently available for *the regression-based approach* and *the g-formula approach*.
+`cmsens` conducts sensitivity analysis for unmeasured confounding via
+the *E-value* approach by [VanderWeele et al.
+(2017)](https://pubmed.ncbi.nlm.nih.gov/28693043/) and [Smith et al.
+(2019)](https://pubmed.ncbi.nlm.nih.gov/31348008/), and sensitivity
+analysis for measurement error via *regression calibration* by [Carroll
+et al. (1995)](https://www.taylorfrancis.com/books/9780429139635) and
+*SIMEX* by [Cook et al.
+(1994)](https://www.jstor.org/stable/2290994?seq=1#metadata_info_tab_contents)
+and [Küchenhoff et al.
+(2006)](https://pubmed.ncbi.nlm.nih.gov/16542233/). Sensitivity analysis
+for measurement error is currently available for *the regression-based
+approach* and *the g-formula approach*.
 
 ## Installation
 
@@ -145,41 +214,74 @@ library(CMAverse)
 
 ## References
 
-Valeri L, Vanderweele TJ (2013). Mediation analysis allowing for exposure-mediator interactions and causal interpretation: theoretical assumptions and implementation with SAS and SPSS macros. Psychological Methods. 18(2): 137 - 150.
- 
-VanderWeele TJ, Vansteelandt S (2014). Mediation analysis with multiple mediators. Epidemiologic Methods. 2(1): 95 - 115.
+Valeri L, Vanderweele TJ (2013). Mediation analysis allowing for
+exposure-mediator interactions and causal interpretation: theoretical
+assumptions and implementation with SAS and SPSS macros. Psychological
+Methods. 18(2): 137 - 150.
 
-Tchetgen Tchetgen EJ (2013). Inverse odds ratio-weighted estimation for causal mediation analysis. Statistics in medicine. 32: 4567 - 4580.
+VanderWeele TJ, Vansteelandt S (2014). Mediation analysis with multiple
+mediators. Epidemiologic Methods. 2(1): 95 - 115.
 
-Nguyen QC, Osypuk TL, Schmidt NM, Glymour MM, Tchetgen Tchetgen EJ (2015). Practical guidance for conducting mediation analysis with multiple mediators using inverse odds ratio weighting. American Journal of Epidemiology. 181(5): 349 - 356.
+Tchetgen Tchetgen EJ (2013). Inverse odds ratio-weighted estimation for
+causal mediation analysis. Statistics in medicine. 32: 4567 - 4580.
 
-VanderWeele TJ, Tchetgen Tchetgen EJ (2017). Mediation analysis with time varying exposures and mediators. Journal of the Royal Statistical Society: Series B (Statistical Methodology). 79(3): 917 - 938.
+Nguyen QC, Osypuk TL, Schmidt NM, Glymour MM, Tchetgen Tchetgen EJ
+(2015). Practical guidance for conducting mediation analysis with
+multiple mediators using inverse odds ratio weighting. American Journal
+of Epidemiology. 181(5): 349 - 356.
 
-Robins JM (1986). A new approach to causal inference in mortality studies with a sustained exposure period-Application to control of the healthy worker survivor effect. Mathematical Modelling. 7: 1393 - 1512.
+VanderWeele TJ, Tchetgen Tchetgen EJ (2017). Mediation analysis with
+time varying exposures and mediators. Journal of the Royal Statistical
+Society: Series B (Statistical Methodology). 79(3): 917 - 938.
 
-Vansteelandt S, Bekaert M, Lange T (2012). Imputation Strategies for the Estimation of Natural Direct and Indirect Effects. Epidemiologic Methods. 1(1): 131 - 158.
+Robins JM (1986). A new approach to causal inference in mortality
+studies with a sustained exposure period-Application to control of the
+healthy worker survivor effect. Mathematical Modelling. 7: 1393 - 1512.
 
-Steen J, Loeys T, Moerkerke B, Vansteelandt S (2017). Medflex: an R package for flexible mediation analysis using natural effect models. Journal of Statistical Software. 76(11).
+Vansteelandt S, Bekaert M, Lange T (2012). Imputation Strategies for the
+Estimation of Natural Direct and Indirect Effects. Epidemiologic
+Methods. 1(1): 131 - 158.
 
-VanderWeele TJ (2014). A unification of mediation and interaction: a 4-way decomposition. Epidemiology. 25(5): 749 - 61.
+Steen J, Loeys T, Moerkerke B, Vansteelandt S (2017). Medflex: an R
+package for flexible mediation analysis using natural effect models.
+Journal of Statistical Software. 76(11).
 
-Imai K, Keele L, Tingley D (2010). A general approach to causal mediation analysis. Psychological Methods. 15(4): 309 - 334.
+VanderWeele TJ (2014). A unification of mediation and interaction: a
+4-way decomposition. Epidemiology. 25(5): 749 - 61.
 
-Schomaker M, Heumann C (2018). Bootstrap inference when using multiple imputation. Statistics in Medicine. 37(14): 2252 - 2266.
+Imai K, Keele L, Tingley D (2010). A general approach to causal
+mediation analysis. Psychological Methods. 15(4): 309 - 334.
 
-VanderWeele TJ, Ding P (2017). Sensitivity analysis in observational research: introducing the 
-E-Value. Annals of Internal Medicine. 167(4): 268 - 274.
+Schomaker M, Heumann C (2018). Bootstrap inference when using multiple
+imputation. Statistics in Medicine. 37(14): 2252 - 2266.
 
-Smith LH, VanderWeele TJ (2019). Mediational E-values: Approximate sensitivity analysis for unmeasured mediator-outcome confounding. Epidemiology. 30(6): 835 - 837.
+VanderWeele TJ, Ding P (2017). Sensitivity analysis in observational
+research: introducing the E-Value. Annals of Internal Medicine. 167(4):
+268 - 274.
 
-Carrol RJ, Ruppert D, Stefanski LA, Crainiceanu C (2006). Measurement Error in Nonlinear Models: A Modern Perspective, Second Edition. London: Chapman & Hall.
+Smith LH, VanderWeele TJ (2019). Mediational E-values: Approximate
+sensitivity analysis for unmeasured mediator-outcome confounding.
+Epidemiology. 30(6): 835 - 837.
 
-Cook JR, Stefanski LA (1994). Simulation-extrapolation estimation in parametric measurement error models. Journal of the American Statistical Association, 89(428): 1314 - 1328.
+Carrol RJ, Ruppert D, Stefanski LA, Crainiceanu C (2006). Measurement
+Error in Nonlinear Models: A Modern Perspective, Second Edition. London:
+Chapman & Hall.
 
-Küchenhoff H, Mwalili SM, Lesaffre E (2006). A general method for dealing with misclassification in regression: the misclassification SIMEX. Biometrics. 62(1): 85 - 96.
+Cook JR, Stefanski LA (1994). Simulation-extrapolation estimation in
+parametric measurement error models. Journal of the American Statistical
+Association, 89(428): 1314 - 1328.
 
-Stefanski LA, Cook JR. Simulation-extrapolation: the measurement error jackknife (1995). Journal of the American Statistical Association. 90(432): 1247 - 56.
+Küchenhoff H, Mwalili SM, Lesaffre E (2006). A general method for
+dealing with misclassification in regression: the misclassification
+SIMEX. Biometrics. 62(1): 85 - 96.
 
-Valeri L, Lin X, VanderWeele TJ (2014). Mediation analysis when a continuous mediator is measured with error and the outcome follows a generalized linear model. Statistics in medicine, 33(28): 4875–4890. 
+Stefanski LA, Cook JR. Simulation-extrapolation: the measurement error
+jackknife (1995). Journal of the American Statistical Association.
+90(432): 1247 - 56.
 
-Efron B (1987). Better Bootstrap Confidence Intervals. Journal of the American Statistical Association. 82(397): 171-185.
+Valeri L, Lin X, VanderWeele TJ (2014). Mediation analysis when a
+continuous mediator is measured with error and the outcome follows a
+generalized linear model. Statistics in medicine, 33(28): 4875--4890.
+
+Efron B (1987). Better Bootstrap Confidence Intervals. Journal of the
+American Statistical Association. 82(397): 171-185.
