--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
-output: md_document
-editor_options: 
-  markdown: 
+output: github_document
+editor_options:
+  markdown:
     wrap: 72
 ---
 
