--- a/README.Rmd
+++ b/README.Rmd
@@ -11,277 +11,135 @@ editor_options:
 knitr::opts_chunk$set(fig.path = "man/figures/")
 ```
 
-# CMAversePlus: a fork of CMAverse with Risk Ratios and Conditional Interventional Draws <img src="man/figures/logo.png" align="right" width="240"/>
 
-[![Project Status:
-Active](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![R build
-status](https://github.com/BS1125/CMAverse/workflows/R-CMD-check/badge.svg)](https://github.com/BS1125/CMAverse/actions)
-[![Codecov test
-coverage](https://codecov.io/gh/BS1125/CMAverse/branch/master/graph/badge.svg)](https://codecov.io/gh/BS1125/CMAverse)
+# CMAversePlus: a friendly fork of CMAverse with extra g-formula options
 
-## About the Package
+<img src="man/figures/logo2.png" align="right" height="300" alt="CMAversePlus logo"/>
 
-The R package `CMAverse` provides a suite of functions for reproducible
-causal mediation analysis including `cmdag` for DAG visualization,
-`cmest` for statistical modeling and `cmsens` for sensitivity analysis.
+**CMAversePlus** is a small “add-on package” based on the excellent
+[CMAverse](https://github.com/BS1125/CMAverse). I created this fork (see
+below) for teaching, personal use, and a few specific projects. I have
+tried to keep this page accessible to those who are new to R and/or GitHub.
 
-See the package [website](https://bs1125.github.io/CMAverse/) for a
-quickstart guide, an overview of statistical modeling approaches and
-examples.
+- **CMAverse** is a widely used R package for causal mediation analysis.
+- **CMAversePlus** keeps the same workflow and commands, but adds a few
+  **extra options for g-computation**, specifically risk ratios / risk
+  differences for binary outcomes, a more standard version of interventional effects,
+  and minor labelling changes.
 
-Cite the paper: [CMAverse a suite of functions for reproducible causal
-mediation
-analyses](https://journals.lww.com/epidem/citation/9000/cmaverse__a_suite_of_functions_for_reproducible.98264.aspx).
+*A fork* is simply a copy of another package’s code that someone adapts
+for their own needs. This fork is **not officially part of CMAverse**.
+If you want the stable, fully supported version, use CMAverse itself.
+If you need these specific extras, feel free to use CMAversePlus.
 
-Cite as well, if using `cmest_multistate`: [Multistate approach for
-stochastic interventions on a time-to-event mediator in the presence of
-competing risks: A new R command within the CMAverse R
-package](https://journals.lww.com/epidem/fulltext/2025/01000/multistate_approach_for_stochastic_interventions.17.aspx).
+#### Why are these functions not part of CMAverse?
 
-We welcome your feedback and questions:
+CMAversePlus was created with specific teaching and project needs in mind. It works well for this purpose, 
+but it has not yet been fully integrated with every feature of CMAverse. Achieving that would require additional work 
+and discussion with the original authors. I haven’t contacted them yet, although I may do so in future.
 
--   Email [bs3141\@columbia.edu](mailto:bs3141@columbia.edu){.email} for
-    general questions
+## What’s different? (when `model = "gformula"`)
 
--   Email
-    [zw2899\@cumc.columbia.edu](mailto:zw2899@cumc.columbia.edu){.email}
-    for questions related to `cmest_multistate`
+```{r features, echo=FALSE, results='asis'}
+library(knitr)
 
-### DAG Visualization
+df <- data.frame(
+  Feature = c(
+    "Effect measures for binary outcomes",
+    "Conditional mediator draws",
+    "Effect labels"
+  ),
+  `What it does` = c(
+    "Choose odds ratio (OR), risk ratio (RR), or risk difference (RD)",
+    "Choose conditional vs marginal mediator draws for interventional effects",
+    "Switch labels automatically between natural and interventional effects"
+  ),
+  `Use in` = c(
+    "`cmest(model = 'gformula')`<br>Binary outcomes only",
+    "`cmest(model = 'gformula')`<br>Interventional effects",
+    "`cmest(model = 'gformula')`<br>Printing/summary only"
+  ),
+  Argument = c("`binary_scale`", "`draw_conditional`", "—"),
+  Options  = c("`'OR' / 'RR' / 'RD'`", "`TRUE / FALSE`", "—"),
+  Default  = c("`'OR'`", "`FALSE`", "—"),
+  Recommended = c("`'RR'` or `'RD'`", "`TRUE`", "—"),
+  check.names = FALSE
+)
 
-`cmdag` visualizes causal relationships via a directed acyclic graph
-(DAG).
-
-### Statistical Modeling
-
-`cmest` implements six causal mediation analysis approaches including
-*the regression-based approach* by [Valeri et al.
-(2013)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3659198/) and
-[VanderWeele et al.
-(2014)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4287269/), *the
-weighting-based approach* by [VanderWeele et al.
-(2014)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4287269/), *the
-inverse odd-ratio weighting approach* by [Tchetgen Tchetgen
-(2013)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3954805/), *the
-natural effect model* by [Vansteelandt et al.
-(2012)](https://www.degruyter.com/view/journals/em/1/1/article-p131.xml?language=en),
-*the marginal structural model* by [VanderWeele et al.
-(2017)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5560424/), and *the
-g-formula approach* by [Robins
-(1986)](https://www.sciencedirect.com/science/article/pii/0270025586900886).
-
-`cmest` currently supports a single exposure, multiple sequential
-mediators and a single outcome. When multiple mediators are of interest,
-`cmest` estimates the joint mediated effect through the set of
-mediators. `cmest` also allows for time varying confounders preceding
-mediators. The two causal scenarios supported are:
-
-(1) There are no confounders affected by the exposure:
-
-```{r echo=F,warning=F,message=F,fig.width=6,fig.height=3}
-library(dagitty)
-g1 <- dagitty( "dag {
-    A -> Y
-    A -> M -> Y
-    C -> A
-    C -> M
-    C -> Y
-}")
-coordinates(g1) <- list(x=c(A=0,Y=4,M=2,C=0.2),y=c(A=0,Y=0,M=-0.8,C=-1))
-plot(g1)
+knitr::kable(
+  df,
+  format = "pipe",
+  align  = c("l","l","l","c","c","c","c"),
+  col.names = colnames(df),
+  escape = FALSE
+)
 ```
 
-(2) There are mediator-outcome confounders affected by the exposure and
-    these confounders precede all of the mediators:
+*By default, both toggles are off. If you don’t change them,
+CMAversePlus behaves exactly like CMAverse.*
 
-```{r echo=F,warning=F,message=F,fig.width=6,fig.height=3}
-g2 <- dagitty::dagitty( "dag {
-    A -> Y
-    A -> M -> Y
-    C -> A
-    C -> M
-    C -> Y
-    A -> L
-    L -> Y
-    L -> M
-    C -> L
-}")
+## New features (details)
 
-dagitty::coordinates(g2) <- list(x=c(A=0,Y=4,M=2,C=0.2,L=2),y=c(A=0,Y=0,M=-0.8,C=-1,L=0.5))
+> **Note (scope)**  
+> All new options currently target **single-mediator** settings. If you
+> use multiple mediators, use the original package or proceed at your own risk.
 
-plot(g2)
-```
+**1) Additional effect measures for binary outcomes.**  
+Use `binary_scale` to choose which effects are reported under
+g-computation:
 
-|                                              |   rb   |  wb   | iorw | ne  |  msm  | gformula[^1] |
-|----------------------------------------------|:------:|:-----:|:----:|:---:|:-----:|:------------:|
-| Continuous Y[^2]                             |   √    |   √   |  √   |  √  |   √   |      √       |
-| Binary Y                                     |   √    |   √   |  √   |  √  |   √   |      √       |
-| Count Y                                      |   √    |   √   |  √   |  √  |   √   |      √       |
-| Nominal Y                                    |   √    |   √   |  √   |  ×  |   √   |      √       |
-| Ordinal Y                                    |   √    |   √   |  √   |  ×  |   √   |      √       |
-| Survival Y                                   |   √    |   ×   |  √   |  ×  |   √   |      √       |
-| Continuous M                                 |   √    |   √   |  √   |  √  |   ×   |      √       |
-| Binary M                                     |   √    |   √   |  √   |  √  |   √   |      √       |
-| Nominal M                                    |   √    |   √   |  √   |  √  |   √   |      √       |
-| Ordinal M                                    |   √    |   √   |  √   |  √  |   √   |      √       |
-| Count M                                      |   √    |   √   |  √   |  √  |   ×   |      √       |
-| M of Any Type                                |   ×    |   √   |  √   |  √  |   ×   |      ×       |
-| Continuous A                                 |   √    | ×[^3] |  ×   |  √  | ×[^4] |      √       |
-| Binary A                                     |   √    |   √   |  √   |  √  |   √   |      √       |
-| Nominal A                                    |   √    |   √   |  √   |  √  |   √   |      √       |
-| Ordinal A                                    |   √    |   √   |  √   |  √  |   √   |      √       |
-| Count A                                      |   √    | ×[^5] |  ×   |  √  | ×[^6] |      √       |
-| Mediator-outcome Confounder(s) Affected by A |   ×    |   ×   |  ×   |  ×  |   √   |      √       |
-| 2-way Decomposition                          |   √    |   √   |  √   |  √  |   √   |      √       |
-| 4-way Decomposition                          |   √    |   √   |  ×   |  √  |   √   |      √       |
-| Estimation: Closed-form Parameter Function   | √[^7]  |   ×   |  ×   |  ×  |   ×   |      ×       |
-| Estimation: Direct Counterfactual Imputation |   √    |   √   |  √   |  √  |   √   |      √       |
-| Inference: Delta Method                      | √[^8]  |   ×   |  ×   |  ×  |   ×   |      ×       |
-| Inference: Bootstrapping                     |   √    |   √   |  √   |  √  |   √   |      √       |
-| Marginal Effects                             | √[^9]  |   √   |  √   |  √  |   √   |      √       |
-| Effects Conditional on C                     | √[^10] |   ×   |  ×   |  ×  |   ×   |      ×       |
+- `"OR"` — odds ratio (CMAverse default)  
+- `"RR"` — risk ratio  
+- `"RD"` — risk difference
 
-: Table: Supported Data Types and Functionalities of `cmest`
+Risk ratios/differences are often more intuitive to interpret than odds ratios.
 
-[^1]: rb: the regression-based approach; wb: the weighting-based
-    approach; iorw: the inverse odds ratio weighting approach; ne: the
-    natural effect model; msm: the marginal structural model; gformula:
-    the g-formula approach.
+**2) Interventional effects via conditional draws of M.**  
+Set `draw_conditional = TRUE` to compute interventional effects using a
+conditional mediator draw. The CMAverse implementation uses a
+marginal draw (via permutation); keeping `draw_conditional = FALSE`
+preserves that behaviour.
 
-[^2]: Y denotes the outcome, A denotes the exposure, M denotes the
-    mediator(s) and C denotes the exposure-outcome confounder(s), the
-    exposure-mediator confounder(s) and the mediator-outcome
-    confounder(s) not affected by the exposure.
+Both approaches are valid and often yield similar results in practice. The conditional
+draw is the more standard definition and often corresponds to more
+sensible hypothetical interventions. It also relies on a slightly weaker
+positivity condition than the marginal draw (discussed in
+[Nguyen et al., 2020](https://psycnet.apa.org/doiLanding?doi=10.1037%2Fmet0000299)).
 
-[^3]: continuous A is not supported when C is not empty; otherwise, it
-    is supported.
+**3) Effect labels for interventional effects.**  
+When `model = "gformula"`:
 
-[^4]: continuous A is not supported when C is not empty; otherwise, it
-    is supported.
+- If `postc` is specified, labels use the randomised-analogue
+  notation (e.g., `rpnde`, and totals are shown as `rte` / `rRte`).
+- If `postc` is not specified, labels use natural effect
+  notation (e.g., `pnde`, `te` / `Rte`).
 
-[^5]: count A is not supported when C is not empty; otherwise, it is
-    supported.
-
-[^6]: count A is not supported when C is not empty; otherwise, it is
-    supported.
-
-[^7]: closed-form parameter function estimation only supports a single
-    mediator.
-
-[^8]: delta method inference is available only when closed-form
-    parameter function estimation is used.
-
-[^9]: marginal effects are estimated when direct counterfactual
-    imputation estimation is used.
-
-[^10]: conditional effects are estimated when closed-form parameter
-    function estimation is used.
-
-### Multiple Imputation
-
-`cmest` provides the option `multimp = TRUE` to perform multiple
-imputations for a dataset with missing values.
-
-### Sensitivity Analysis
-
-`cmsens` conducts sensitivity analysis for unmeasured confounding via
-the *E-value* approach by [VanderWeele et al.
-(2017)](https://pubmed.ncbi.nlm.nih.gov/28693043/) and [Smith et al.
-(2019)](https://pubmed.ncbi.nlm.nih.gov/31348008/), and sensitivity
-analysis for measurement error via *regression calibration* by [Carroll
-et al. (1995)](https://www.taylorfrancis.com/books/9780429139635) and
-*SIMEX* by [Cook et al.
-(1994)](https://www.jstor.org/stable/2290994?seq=1#metadata_info_tab_contents)
-and [Küchenhoff et al.
-(2006)](https://pubmed.ncbi.nlm.nih.gov/16542233/). Sensitivity analysis
-for measurement error is currently available for *the regression-based
-approach* and *the g-formula approach*.
+Importantly, when intermediate confounding is present, the sum/product of the interventional direct and indirect effect 
+is **not** the standard total effect. We label that quantity as the **randomised total effect** (`rte`) for clarity
+(also known as the *overall effect*).
 
 ## Installation
 
-The latest version can be installed via:
+```{r, eval=FALSE}
+# install remotes if needed
+if (!requireNamespace("remotes", quietly = TRUE)) {
+  install.packages("remotes")
+}
 
-```{r eval=F}
-devtools::install_github("BS1125/CMAverse")
+# install CMAversePlus (replace with your fork if different)
+remotes::install_github("martindanka/CMAversePlus")
 ```
 
-Load `CMAverse`:
+If you prefer not to use GitHub installs, you can download the package
+archive (`.zip` / `.tar.gz`) from the repository and use
+**RStudio → Tools → Install Packages… → Install from: Package Archive
+File**.
 
-```{r message=F,warning=F}
-library(CMAverse)
-```
+## Further CMAverse resources
 
-## References
+See the CMAverse website: <https://bs1125.github.io/CMAverse/>
 
-Valeri L, Vanderweele TJ (2013). Mediation analysis allowing for
-exposure-mediator interactions and causal interpretation: theoretical
-assumptions and implementation with SAS and SPSS macros. Psychological
-Methods. 18(2): 137 - 150.
+## Attribution
 
-VanderWeele TJ, Vansteelandt S (2014). Mediation analysis with multiple
-mediators. Epidemiologic Methods. 2(1): 95 - 115.
-
-Tchetgen Tchetgen EJ (2013). Inverse odds ratio-weighted estimation for
-causal mediation analysis. Statistics in medicine. 32: 4567 - 4580.
-
-Nguyen QC, Osypuk TL, Schmidt NM, Glymour MM, Tchetgen Tchetgen EJ
-(2015). Practical guidance for conducting mediation analysis with
-multiple mediators using inverse odds ratio weighting. American Journal
-of Epidemiology. 181(5): 349 - 356.
-
-VanderWeele TJ, Tchetgen Tchetgen EJ (2017). Mediation analysis with
-time varying exposures and mediators. Journal of the Royal Statistical
-Society: Series B (Statistical Methodology). 79(3): 917 - 938.
-
-Robins JM (1986). A new approach to causal inference in mortality
-studies with a sustained exposure period-Application to control of the
-healthy worker survivor effect. Mathematical Modelling. 7: 1393 - 1512.
-
-Vansteelandt S, Bekaert M, Lange T (2012). Imputation Strategies for the
-Estimation of Natural Direct and Indirect Effects. Epidemiologic
-Methods. 1(1): 131 - 158.
-
-Steen J, Loeys T, Moerkerke B, Vansteelandt S (2017). Medflex: an R
-package for flexible mediation analysis using natural effect models.
-Journal of Statistical Software. 76(11).
-
-VanderWeele TJ (2014). A unification of mediation and interaction: a
-4-way decomposition. Epidemiology. 25(5): 749 - 61.
-
-Imai K, Keele L, Tingley D (2010). A general approach to causal
-mediation analysis. Psychological Methods. 15(4): 309 - 334.
-
-Schomaker M, Heumann C (2018). Bootstrap inference when using multiple
-imputation. Statistics in Medicine. 37(14): 2252 - 2266.
-
-VanderWeele TJ, Ding P (2017). Sensitivity analysis in observational
-research: introducing the E-Value. Annals of Internal Medicine. 167(4):
-268 - 274.
-
-Smith LH, VanderWeele TJ (2019). Mediational E-values: Approximate
-sensitivity analysis for unmeasured mediator-outcome confounding.
-Epidemiology. 30(6): 835 - 837.
-
-Carrol RJ, Ruppert D, Stefanski LA, Crainiceanu C (2006). Measurement
-Error in Nonlinear Models: A Modern Perspective, Second Edition. London:
-Chapman & Hall.
-
-Cook JR, Stefanski LA (1994). Simulation-extrapolation estimation in
-parametric measurement error models. Journal of the American Statistical
-Association, 89(428): 1314 - 1328.
-
-Küchenhoff H, Mwalili SM, Lesaffre E (2006). A general method for
-dealing with misclassification in regression: the misclassification
-SIMEX. Biometrics. 62(1): 85 - 96.
-
-Stefanski LA, Cook JR. Simulation-extrapolation: the measurement error
-jackknife (1995). Journal of the American Statistical Association.
-90(432): 1247 - 56.
-
-Valeri L, Lin X, VanderWeele TJ (2014). Mediation analysis when a
-continuous mediator is measured with error and the outcome follows a
-generalized linear model. Statistics in medicine, 33(28): 4875--4890.
-
-Efron B (1987). Better Bootstrap Confidence Intervals. Journal of the
-American Statistical Association. 82(397): 171-185.
+CMAversePlus is only a small addition that builds directly on CMAverse. Please **cite CMAverse** when
+you use this fork. If you specifically rely on the add-ons here, you’re welcome to reference this repository as well.
