--- a/README.Rmd
+++ b/README.Rmd
@@ -110,7 +110,7 @@ positivity condition than the marginal draw (discussed in
 When `model = "gformula"`:
 
 - If `postc` is specified, labels use the randomised-analogue
-  notation (e.g., `rpnde`, and totals are shown as `rte` / `rRte`).
+  notation (e.g., `rpnde`, and total effects are shown as `rte` / `rRte`).
 - If `postc` is not specified, labels use natural effect
   notation (e.g., `pnde`, `te` / `Rte`).
 
